syntax = "proto3";
package kVPut;
option go_package = "/kVPut";

//put kv
message KVPut {
  message Input {
    string  Key = 1;
    string  Value = 2;
  }

  message Output {
  }
}